Spremenila razred Pot in metodo pot