@@ -53,52 +53,42 @@ public class Igra {
 	}
 
 	//Pomozna funkcija, ki sproti preverja ali je kaksno od sosednjih polj od istega igralca in tako gradi pot
-	private Pot pot(int i, int j, Polje r) {
-		LinkedList<Integer> x = new LinkedList<Integer>();
-		LinkedList<Integer> y = new LinkedList<Integer>();
-		while (true){
-			int prejsnjiX = i;
-			int prejsnjiY = j;
-			int noviX = i;
-			int noviY = j;
-			LinkedList<Koordinati> sosedi = new LinkedList<Koordinati>();
-			if (noviY < N) sosedi.add(new Koordinati(noviX, noviY + 1));
-			if (noviY > 0) sosedi.add(new Koordinati(noviX, noviY - 1));
-			if (noviX < N) sosedi.add(new Koordinati(noviX + 1, noviY));
-			if (noviX > 0) sosedi.add(new Koordinati(noviX - 1, noviY));
-			if (noviY < N && noviX > 0) sosedi.add(new Koordinati(noviX - 1, noviY + 1));
-			if (noviY > 0 && noviX < N) sosedi.add(new Koordinati(noviX + 1, noviY - 1));
-			for (Koordinati k : sosedi) {
-				if (plosca[k.getX()][k.getY()] == r) {
-					if ((k.getY() == N && r == Polje.R) || (k.getX() == N && r == Polje.M)) {
-						x.add(prejsnjiX); x.add(noviX);
-						y.add(prejsnjiY); y.add(noviY);
-						return new Pot(x, y);
-					}
-					else if ((k.getX() != prejsnjiX || k.getY() != prejsnjiY) && plosca[k.getX()][k.getY()] == r) {
-						x.add(prejsnjiX);
-						y.add(prejsnjiY);
-						prejsnjiX = noviX;
-						prejsnjiY = noviY;
-						noviX = k.getX();
-						noviY = k.getY();	
-					}
+	private Pot pot(int prejsnjiX, int prejsnjiY, int noviX, int noviY, Polje barva) {
+		LinkedList<Koordinati> koordinate = new LinkedList<Koordinati>();
+		LinkedList<Koordinati> sosedi = new LinkedList<Koordinati>();
+		if (noviY < N) sosedi.add(new Koordinati(noviX, noviY + 1));
+		if (noviY > 0) sosedi.add(new Koordinati(noviX, noviY - 1));
+		if (noviX < N) sosedi.add(new Koordinati(noviX + 1, noviY));
+		if (noviX > 0) sosedi.add(new Koordinati(noviX - 1, noviY));
+		if (noviY < N && noviX > 0) sosedi.add(new Koordinati(noviX - 1, noviY + 1));
+		if (noviY > 0 && noviX < N) sosedi.add(new Koordinati(noviX + 1, noviY - 1));
+		for (Koordinati k : sosedi) {
+			if (plosca[k.getX()][k.getY()] == barva) {
+				if ((k.getY() == N && barva == Polje.R) || (k.getX() == N && barva == Polje.M)) {
+					koordinate.add(new Koordinati(prejsnjiX, prejsnjiY));
+					koordinate.add(new Koordinati(noviX, noviY));
+					koordinate.add(new Koordinati(k.getX(), k.getY()));
+					return new Pot(koordinate);
 				}
-				else return null;
+				else if ((k.getX() != prejsnjiX || k.getY() != prejsnjiY)) {
+					koordinate.add(new Koordinati(prejsnjiX, prejsnjiY));
+					return pot(noviX, noviY, k.getX(), k.getY(), barva);	
+				}
 			}
 		}
+		return null;
 	}
 	
 	//S pomocjo pomozne funkcije preveri, ali obstaja zmagovalna pot, drugace vrne null
 	public Pot zmagovalnaPot() {
 		for (int i = 0; i < N; ++i) {
 			if (plosca[i][0] == Polje.R) {
-				return pot(i, 0, Polje.R);
+				return pot(i, 0, i, 0, Polje.R);
 			}
 		}
 		for (int j = 0; j < N; ++j) {
 			if (plosca[0][j] == Polje.M) {
-				return pot(0, j, Polje.M);
+				return pot(0, j, 0, j, Polje.M);
 			}
 		}
 		return null;
@@ -108,7 +98,7 @@ public class Igra {
 	public Stanje stanje() {
 		Pot p = zmagovalnaPot();
 		if (p != null) {
-			switch (plosca[p.x.get(0)][p.y.get(0)]) {
+			switch (plosca[p.koordinate.getFirst().getX()][p.koordinate.getFirst().getY()]) {
 			case R : return Stanje.ZMAGA_R;
 			case M : return Stanje.ZMAGA_M;
 			case PRAZNO : assert false;
